# PodCharts

./: .gitignore  CURRENT_STATE.md  DEBUG_500_ERROR.md  DEPLOYMENT.md  ENABLE_RLS.md  EPISODE_TRACKING.md  FEATURES.md  GITHUB_SECRETS_SETUP.md  INDUSTRY_FEATURES.md  INDUSTRY_READY.md  INGESTION_EXPLAINED.md  LOCAL_STRIPE_TESTING.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  RUN.md  STRIPE_WEBHOOK_SETUP.md  TROUBLESHOOTING_500.md  VERCEL_BACKEND_DEPLOY.md  test-api.sh
.github/workflows/: ingest.yml
backend/: README.md  env.example  environment.yml  pyproject.toml  requirements.txt  vercel.json
backend/api/: index.py  test.py
backend/app/: auth.py  db.py  main.py  subscriptions.py
backend/scripts/: backfill.py  check_data.py  check_days.py  check_db_usage.py  check_momentum.py  create_synthetic_history.py  create_synthetic_history_simple.py  enable_rls.py  enable_rls.sql  ingest.py  ingest_episodes.py  setup_db.py  setup_episodes.py  test_db_connection.py
frontend/: next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/: api-client.tsx  page.tsx
frontend/app/compare/: compare-client.tsx  page.tsx
frontend/app/dashboard/: dashboard-client.tsx  page.tsx
frontend/app/insights/: insights-client.tsx  page.tsx
frontend/app/leaderboard/: leaderboard-client.tsx  page.tsx
frontend/app/login/: page.tsx
frontend/app/most-watched/: most-watched-client.tsx  page.tsx
frontend/app/pricing/: page.tsx  pricing-client.tsx
infra/: schema.sql  schema_episodes.sql
(+5 files in other folders)
